feat: implement WRPAC WRPRC
